# wisevision_action_executor

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ros2_tests.yml
docs/: BUILD_AND_RUN.md  CODE_OF_CONDUCT.md  INTERFACE_DESIGN.md  MINIMAL_EXAMPLE.md
wisevision_action_executor/: CMakeLists.txt  package.xml
wisevision_action_executor/include/: automatic_action_service.hpp  data_structures.hpp  value_extractor.hpp  yaml_config_manager.hpp
wisevision_action_executor/src/: automatic_action_service.cpp  main.cpp  value_extractor.cpp  yaml_config_manager.cpp
wisevision_action_executor/test/: automatic_action_service_test.cpp  value_extractor_test.cpp  yaml_config_manager_test.cpp
